2012-01-14  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: Do not record the edit buffer in the list of
	recently selected ones. Thanks to tdkn who reported the behavior
	related to the list.
	(twittering-update-status-from-pop-up-buffer): do not put the
	buffer at the front of the list of recently selected ones.

	* twittering-mode.el: Add a field property to a tweet on the
	function `twittering-render-a-field'.
	(twittering-make-common-properties): Do not add a field property.
	(twittering-render-a-field): add a field property.

2012-01-08  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: Explicitly signal an error when
	twittering-mode fails to retrieve a request token.
	(twittering-oauth-get-access-token): signal an error when
	twittering-mode fails to retrieve a request token.

	* test/test-twittering-mode.el: Add a test for parsing JSON with a
	character unsupported by Emacs.

	* test/test-twittering-mode.el: Add a test for parsing XML with a
	character unsupported by Emacs.

	* twittering-mode.el: Confirm that a file is readable before
	decrypting it.
	(twittering-read-from-encrypted-file): confirm that FILE is
	readable.

	* twittering-mode.el: Expand a path before invoking the function
	`epg-decrypt-file'.
	(twittering-read-from-encrypted-file): expand FILE before invoking
	`epg-decrypt-file'.

2011-12-09  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: Retrieve an ID of a tweet replied by a
	tweet on a search timeline. You can display replied tweets on a
	search timeline if they have been retrieved. This is available
	only when tweets are retrieved as the JSON format.
	(twittering-json-object-to-a-status-on-search): extract the
	"in_reply_to_status_id_str" field, which Twitter begins to serve
	recently.

	* twittering-mode.el: Replace `json-read' with
	`twittering-json-read' in order to prevent abnormal exit caused by
	decoding an unknown code point. Thanks to lemit who reported the
	problem.